--- a/signup.html
+++ b/signup.html
@@ -167,9 +167,57 @@
             <div data-aos="zoom-in">
               <p>hello@skillbirdge.com</p>
             </div>
-        </div>
-    </div>
-</footer>
+            <div data-aos="zoom-in">
+                <img src="assets/icons/home_icon/phone.png" alt="">
+              </div>
+              <div data-aos="zoom-in">
+                <p>+91 91813 23 2309</p>
+              </div>
+              <div data-aos="zoom-in">
+                <img src="assets/icons/home_icon/location.png" alt="" class="">
+              </div>
+              <div data-aos="zoom-in">
+                <p>Somewhere in the World</p>
+              </div>
+            </div>
+            <div class=" mt-5 p-2   rounded-5 text-white  footer-border-col  container-sm welcome-text-bg-col " data-aos="zoom-in">
+              <div class="container d-flex flex-column flex-sm-row  align-items-center  justify-content-between ">
+                <div class=" d-flex gap-2 px-2 social" data-aos="fade-right">
+                  <a class="facebook rounded-circle social-bg-col text-center p-2" href="#" data-aos="fade-down-right">
+                    <img src="assets/icons/home_icon/facebook.png" alt="">
+                  </a>
+                  <a class="twitter rounded-circle social-bg-col text-center p-2"  href="#" data-aos="fade-up-right">
+                    <img src="assets/icons/home_icon/twitter.png" alt="">
+                  </a>
+                  <a class="linkdeln rounded-circle social-bg-col text-center p-2" href="#" data-aos="fade-down-left">
+                    <img src="assets/icons/home_icon/linkedin.png" alt="">
+                  </a>
+                </div>
+                <div data-aos="fade-up">
+                  <p class="mt-2 line-text-col  ">YourBank All Rights Reserved</p>
+                </div>
+        
+                <div class="d-flex gap-2 "data-aos="fade-left">
+                  <a class="mt-2 line-text-col text-decoration-none" href="#">Privacy Policy</a>
+                  <div class="line "></div>
+                  <a class="mt-2 line-text-col text-decoration-none" href="#">Terms of Service</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </footer>
+    
+  
+      <!-- bootstrap script -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+      <!-- swipper -->
+      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+      <script src="./javascript/app.js"></script>
+      <!-- AOS SCRIPT -->
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+          AOS.init();
+        </script>
 
 </body>
 </html>
