--- a/security.html
+++ b/security.html
@@ -204,8 +204,89 @@
               </div>
 
           </div>
-          
+
       </section>
+
+      <!-- 
+        faq section
+      -->
+      <section class="px-5 ">
+
+        <div class="container">
+
+            <h1>
+                <span class="text" >Frequently </span>Asked Questions 
+            </h1>
+            <p>
+                Still you have any questions? Contact our Team via support@yourbank.com
+            </p>
+
+            <div class="row row-cols-1 row-cols-md-2 g-4 ">
+
+                <div class="col">
+
+                  <div class="card" data-aos="fade-up">
+
+                    <div class="cont-box text-white rounded-1 px-3 py-3">
+                      <h5 class="card-title">How do I open an account with YourBank?</h5>
+                      <hr>
+                      <p class="card-text">
+                        Opening an account with YourBank is easy. 
+                        Simply visit our website and click on the "Open an Account" button. 
+                        Follow the prompts, provide the required information, and complete the application process. 
+                        If you have any questions or need assistance, our customer support team is available to help.
+                        <br>
+                        <br>
+                        <br>
+                      </p>
+                    </div>
+
+                  </div>
+
+                </div>
+
+                <div class="col">
+
+                  <div class="card" data-aos="fade-down">
+
+                    <div class="cont-box text-white rounded-1 px-3 py-3">
+                      <h5 class="card-title">What documents do I need to provide to apply for a loan?</h5>
+                      <hr>
+                      <p class="card-text">
+                        The documents required for a loan application may vary depending on the type of loan you are applying for. 
+                        Generally, you will need to provide identification documents (such as a passport or driver's license), 
+                        proof of income (such as pay stubs or tax returns), and information about the collateral (if applicable). 
+                        Our loan officers will guide you through the specific requirements during the application process.
+                      </p>
+                    </div>
+
+                  </div>
+
+                </div>
+
+                <div class="col">
+
+                  <div class="card" data-aos="fade-up-right">
+
+                    <div class="cont-box text-white rounded-1 px-3 py-3">
+                      <h5 class="card-title">How can i access my accounts online?</h5>
+                      <hr>
+                      <p class="card-text">
+                        The documents required for a loan application may vary depending on the type of loan you are applying for. 
+                        Generally, you will need to provide identification documents (such as a passport or driver's license), 
+                        proof of income (such as pay stubs or tax returns), and information about the collateral (if applicable). 
+                        Our loan officers will guide you through the specific requirements during the application process.
+                      </p>
+                    </div>
+
+                  </div>
+                  
+                </div>
+
+            </div>
+        </div>
+
+    </section>
 
 </body>
 </html>
