--- a/security.html
+++ b/security.html
@@ -280,13 +280,104 @@
                     </div>
 
                   </div>
-                  
+
+                </div>
+
+                <div class="col">
+                    <div class="card" data-aos="fade-up-left">
+                      <div class="cont-box text-white rounded-1 px-3 py-3">
+                        <h5 class="card-title">Are my transactions and personal information secure?</h5>
+                        <hr>
+                        <p class="card-text">
+                          The documents required for a loan application may vary depending on the type of loan you are applying for. 
+                          Generally, you will need to provide identification documents (such as a passport or driver's license), 
+                          proof of income (such as pay stubs or tax returns), and information about the collateral (if applicable). 
+                          Our loan officers will guide you through the specific requirements during the application process.
+                        </p>
+                      </div>
+                    </div>
                 </div>
 
             </div>
-        </div>
 
-    </section>
+            <div>
+                <div class="py-3 d-flex justify-content-center">
+                  <button type="button" class="btn btn-outline-dark bg-dark text-white rounded-5 py-3 px-4">Load All FAQ’s v</button>
+            </div>
+
+      </section>
+
+      <!-- 
+        footer section
+      -->
+      <footer class="welcome-section-bg-col py-5" data-aos="zoom-in">
+      <div class="footer-contain container-sm py-5 ">
+        <div class="yourbank d-flex justify-content-center align-items-center  text-white gap-1 " data-aos="zoom-in">
+          <img src="./assets/css/img/logo.png" alt="" class="align-content-center  align-items-center ">
+          <p class="mt-3">YourBank</p>
+        </div>
+        <div class="list mt-5">
+          <ul class="navbar-nav d-flex flex-row align-content-center justify-content-center gap-1 gap-lg-5   text-white  ">
+            <li class="nav-item" data-aos="zoom-in">
+              <a class="footer-link text-white" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item" data-aos="zoom-in">
+              <a class="footer-link text-white" href="./careers.html">Careers</a>
+            </li>
+            <li class="nav-item " data-aos="zoom-in">
+              <a class="footer-link text-white  " href="./about-us.html">About</a>
+            </li>
+            <li class="nav-item" data-aos="zoom-in">
+              <a class="footer-link active text-white" style="background-color: #262626;" aria-current="page" href="security.html">Security</a>
+            </li>   
+          </ul>
+        </div>
+        <div class="social-handles  d-flex flex-wrap flex-sm-row   gap-2 align-content-center justify-content-center   mt-5 text-white   py-3 ">
+          <div data-aos="zoom-in">
+            <img src="./assets/css/img/email.png" alt="" class="">
+          </div>
+          <div data-aos="zoom-in">
+            <p>hello@skillbirdge.com</p>
+          </div>
+          <div data-aos="zoom-in">
+            <img src="./assets/css/img/phone.png" alt="">
+          </div>
+          <div data-aos="zoom-in">
+            <p>+91 91813 23 2309</p>
+          </div>
+          <div data-aos="zoom-in">
+            <img src="./assets/css/img/location.png" alt="" class="">
+          </div>
+          <div data-aos="zoom-in">
+            <p>Somewhere in the World</p>
+          </div>
+        </div>
+        <div class=" mt-5 p-2   rounded-5 text-white  footer-border-col  container-sm welcome-text-bg-col " data-aos="zoom-in">
+          <div class="container d-flex flex-column flex-sm-row  align-items-center  justify-content-between ">
+            <div class=" d-flex gap-2 px-2 social" data-aos="fade-right">
+              <a class="facebook rounded-circle text-center p-2" style="background-color: #CAFF33;" href="#" data-aos="fade-down-right">
+                <img src="./assets/css/img/facebook.png" alt="">
+              </a>
+              <a class="twitter rounded-circle social-bg-col text-center p-2" style="background-color: #CAFF33;" href="#" data-aos="fade-up-right">
+                <img src="./assets/css/img/twitter.png" alt="">
+              </a>
+              <a class="linkdeln rounded-circle social-bg-col text-center p-2" style="background-color: #CAFF33;"href="#" data-aos="fade-down-left">
+                <img src="./assets/css/img/linkedin.png" alt="">
+              </a>
+            </div>
+            <div data-aos="fade-up">
+              <p class="mt-2 line-text-col  ">YourBank All Rights Reserved</p>
+            </div>
+    
+            <div class="d-flex gap-2 "data-aos="fade-left">
+              <a class="mt-2 line-text-col text-decoration-none" href="#">Privacy Policy</a>
+              <div class="line "></div>
+              <a class="mt-2 line-text-col text-decoration-none" href="#">Terms of Service</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      </footer>
 
 </body>
 </html>
