Added a new 'values' section to the career.html page, including text and layout changes.

--- a/career.html
+++ b/career.html
@@ -72,6 +72,70 @@
 
     </div>
 
+    <!-- 
+        values section  
+    -->
+
+    <section class="py-5 ">
+
+        <div class="container-sm">
+
+            <span class="d-flex">
+                <h5 class="text-white">Our</h5>
+                <h5 class="ms-1 pri-color">Values</h5>
+            </span>
+
+            <p class="value-text">
+                At YourBank, our values form the foundation of our organization and guide our actions.
+                We believe in upholding the highest standards of integrity, delivering exceptional service, and embracing innovation. 
+                These values define our culture and shape the way we work together to achieve our goals.
+             </p>
+
+            <div class="row pt-5 d-flex value">
+
+                <div class="col-md-4 col-lg-3 col-12 border-start ">
+            <h1 class="value-text">Integrity</h2>
+             <p class=" mt-4 p-value value-text">We conduct ourselves with utmost honesty, transparency, and ethical behavior. 
+               We believe in doing what is right for our customers, colleagues, and stakeholders, even when faced with difficult choices.
+              </p>
+                </div>
+
+                <div class="col-md-4 col-lg-3 col-12 right-value border-start">
+                <h1 class="h-value">Customer Centricity</h1>
+                <p class="mt-4 px-1 ms-1 p-value value-text">Our customers are at the heart of everything we do. We are dedicated to understanding their needs, 
+                providing personalized solutions, and delivering exceptional service that exceeds expectations.
+                 </p>
+                </div>
+
+            </div>
+
+            <div class="row d-flex second-value">
+
+                <div class="left-value col-md-4 col-lg-3 col-12 border-start">
+                 <h1 class="value-text">Collaboration</h2>
+                 <p class=" mt-4 p-value value-text">We foster a collaborative and inclusive work environment, where teamwork and diversity are celebrated. 
+                  By leveraging the unique strengths and perspectives of our employees, we drive innovation and achieve greater success together.
+                 </p>
+                </div>
+
+                <div class="col-md-4 col-lg-3 col-12 right-value border-start">
+
+                   <span class= "text-start">
+                    <h1 class="h-value ms-2 value-text">Innovation</h1>
+                    <p class="mt-4 px-1 ms-1 p-value value-text">
+                        Our customers are at the heart of everything we do. We are dedicated to understanding their needs, 
+                        providing personalized solutions, and delivering exceptional service that exceeds expectations.
+                    </p>
+                  </span>
+                  
+                </div>
+
+            </div>
+
+        </div>
+
+    </section >
+
   </main>
   
 </body>
