Added benefits section to career.html with four benefit cards

--- a/career.html
+++ b/career.html
@@ -127,7 +127,7 @@
                         providing personalized solutions, and delivering exceptional service that exceeds expectations.
                     </p>
                   </span>
-                  
+
                 </div>
 
             </div>
@@ -135,6 +135,94 @@
         </div>
 
     </section >
+
+      <!-- 
+            benefits section -
+       -->
+
+      <section class="py-5 ">
+
+        <div class="container-sm">
+
+            <div class="col-md-8">
+            
+           <span class=" d-flex gx-5">
+            <h5 class="text-white" >Our</h5>
+             <h5 class="ms-1 pri-color">Benefits</h5>
+           </span>
+            </div>
+
+            <p class="value-text">
+                At YourBank, we value our employees and are dedicated to their well-being and success. 
+                We offer a comprehensive range of benefits designed to support their personal and professional growth.
+             </p>
+
+            <div class="row benefits d-flex ms-4 pt-5 mb-5">
+                <div class="benefit-text col-md-4 col-lg-3 col-12 shadow-sm">
+
+                <span class="d-flex">
+
+                <p >
+                    <img src="./career_imgs/competitive icon.png" alt="" width="74px">
+                </p>
+
+                <p class="mt-4 text-white">
+                    Competitive Compensation
+                </p>
+                </span>
+                <p class="value-text">We provide a competitive salary package that recognizes the skills and expertise of our employees. 
+                    YourBank believes in rewarding exceptional performance and offering opportunities for financial growth.
+                </p>
+
+                </div>
+
+                <div class="benefit-text col-md-4 col-lg-3 col-12 shadow-sm">
+
+                    <span class="d-flex">
+                    <p class="fs-5">
+                        <img src="./career_imgs/health icon.png" alt="" width="74px">
+                    </p>
+                    <p class="mt-4 text-white">Health and Wellness</p>
+                    </span>
+
+                    <p class="value-text">We prioritize the health and well-being of our employees by providing comprehensive medical, dental, and vision insurance plans. 
+                        We also offer wellness programs, gym memberships, and resources to support a healthy lifestyle.
+                    </p>
+
+                </div>
+            </div>
+
+            <div class="row benefits d-flex ms-4 mt-5 pt-5">
+
+                <div class="benefit-text col-md-4 col-lg-3 col-12 shadow-sm">
+
+                    <span class="d-flex">
+                    <p class="fs-5">
+                        <img src="./career_imgs/retire icon.png" alt="" width="74px">
+                    </p>
+                    <p class="mt-4 text-white">Retirement Planning</p>
+                    </span>
+                    <p class="value-text">
+                        YourBank is committed to helping employees plan for their future.
+                        We offer a retirement savings plan with a generous employer match to help them build a secure financial foundation for the long term.
+                    </p>
+
+                </div>
+
+                <div class="benefit-text col-md-4 col-lg-3 col-12 shadow-sm">
+                        <span class="d-flex">
+                            <p class="fs-5">
+                                <img src="./career_imgs/work-life icon.png" alt="" width="74px">
+                            </p>
+                            <p class="mt-4 text-white">Work-Life Balance</p>
+                        </span>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
 
   </main>
   
