Updated career.html: added new job requirements, FAQ section, and formatting changes

--- a/career.html
+++ b/career.html
@@ -384,7 +384,7 @@
 
                     <div class="job-text col-md-4 col-lg-3 col-12 shadow-sm">
 
-                         <h6 class="fs-5 text-white">IT Security Specialist</h6>
+                        <h6 class="fs-5 text-white">IT Security Specialist</h6>
                         
                          <span class="d-flex mt-1">
                                <p class= "fs-6  opening value-text">Location: India</p>
@@ -416,7 +416,74 @@
                             <p class="fs-6 ms-2 mt-1 value-text">Minimum of 5 years of experience in IT security or a similar role.</p>
                         </span>
 
+                        <span class="d-flex">
+
+                            <p class= "fs-6"><img src="./career_imgs/portfolio icon.png" alt=""></p>
+                             <p class="fs-6 ms-2 mt-1 value-text">In-depth knowledge of network security protocols and technologies.</p>
+                        </span>
+
+                        <span class="d-flex">
+                               <p class= "fs-6"><img src="./career_imgs/portfolio icon.png" alt="">.</p>
+                                  <p class="fs-6 ms-2 mt-1 value-text">Familiarity with regulatory frameworks such as PCI DSS and GDPR.</p>
+                        </span>
+
+                        <span class="d-flex">
+                              <p class= "fs-6"><img src="./career_imgs/portfolio icon.png" alt=""></p>
+                           <p class="fs-6 ms-2 mt-1 value-text">Professional certifications such as CISSP or CISM are preferred.</p>
+                        </span>
+                        <button class="apply rounded-5 py-2 mt-4 mb-5" style="width: 120px;">
+                            Apply Now
+                        </button>
                     </div>
+
+                </div>
+
+         </div>
+       </div>
+
+    </section>
+
+    <!-- 
+        faq section  
+    -->
+
+    <section class="py-5 ">
+
+        <div class="container-sm">
+
+            <div class="col-md-8">
+
+                <span class=" d-flex ms-4">
+                    <h5 class="pri-color">Frequently</h5>
+                    <h5 class="ms-1 text-white">Asked Questions</h5>
+                </span>
+
+            </div>
+
+            <p class="ms-4 value-text">
+                Still you have any questions? Contact our Team via support@yourbank.com
+            </p>
+
+            <div class="row d-flex pt-5 mb-5 ask">
+
+                <div class="benefit-text col-md-4 col-lg-3 col-12 shadow-sm">
+
+                    <p class="mt-4 border-bottom text-white">How do I open an account with YourBank?</p>
+                    <p class="text-white">Opening an account with YourBank is easy. Simply visit our website and click on the "Open an Account" button. 
+                        Follow the prompts, provide the required information, 
+                        and complete the application process. If you have any questions or need assistance, our customer support team is available to help.
+                    </p>
+
+                </div>
+
+                <div class="benefit-text col-md-4 col-lg-3 col-12 shadow-sm">
+
+                    <p class="border-bottom text-white">What documents do I need to provide to apply for a loan?</p>        
+                    <p class="text-white">
+                        The documents required for a loan application may vary depending on the type of loan you are applying for. 
+                        Generally, you will need to provide identification documents (such as a passport or driver's license), proof of income (such as pay stubs or tax returns), 
+                        and information about the collateral (if applicable). Our loan officers will guide you through the specific requirements during the application process.
+                    </p>
 
                 </div>
 
@@ -425,6 +492,7 @@
         </div>
 
     </section>
+
   </main>
   
 </body>
