Added FAQ section and career section to career.html

--- a/career.html
+++ b/career.html
@@ -489,9 +489,75 @@
 
             </div>
 
+            <div class="row ask d-flex mt-5 pt-5">
+
+                <div class="ask-text col-md-4 col-lg-3 col-12 shadow-sm">
+                    <p class="mt-4 border-bottom text-white">How can I access my accounts online?</p>     
+                    <p class="value-text">
+                        Accessing your accounts online is simple and secure. Visit our website and click on the "Login" button. 
+                        Enter your username and password to access your accounts. If you haven't registered for online banking, 
+                        click on the "Enroll Now" button and follow the registration process. 
+                        If you need assistance, our customer support team is available to guide you.
+                    </p>
+                </div>
+
+                <div class="ask-text col-md-4 col-lg-3 col-12 shadow-sm">
+                    <p class=" border-bottom border-light-subtle text-white">Are my transactions and personal information secure?</p>
+                    <p class="value-text">
+                        At YourBank, we prioritize the security of your transactions and personal information.
+                        We employ industry-leading encryption and multi-factor authentication to ensure that your data is protected.
+                        Additionally, we regularly update our security measures to stay ahead of emerging threats. 
+                        You can bank with confidence knowing that we have robust security systems in place.
+                    </p>
+                </div>
+
+        </div>
+
+        <button class="text-white rounded-5 py-2 mt-4 mb-5 faq-btn bg-dark" style="width: 150px;">
+            Load All FAQ's <img src="./career_imgs/drop icon.png" alt="">
+        </button>
+
         </div>
 
     </section>
+
+    <!-- 
+        career section 
+    -->
+   <section>
+
+        <div class="bank-career">
+
+            <span class="img pri-color">
+                <img src="./career_imgs/Abstract Design.png" alt="" style="width: 190px;">
+            </span>
+
+            <div class="start position-absolute">
+
+                <span class="mt-3 d-flex">
+                    <h5 class="text-white">Start your Career with</h5>
+                    <h5 class="ms-1 pri-color">YourBanK today!</h5>
+                </span>
+
+                <p class="value-text">
+                    Lorem ipsum dolor sit amet consectetur. Blandit odio semper risus pellentesque elit. 
+                    Pellentesque eget ut imperdiet nulla penatibus. 
+                    Nascetur viverra arcu sed amet cursus purus.
+                </p>
+
+            </div>
+
+            <div class="account-btn">
+
+                <button class="apply rounded-5 py-2 mt-4 mb-5 account-btn" style="width: 150px;">
+                    Open Account
+                </button>
+
+            </div>
+            
+        </div>
+    
+</section>
 
   </main>
   
