--- a/pricing.html
+++ b/pricing.html
@@ -79,7 +79,7 @@
 
             </div>
 
-            <div class="w-100 prices">
+            <div class="w-100 mt-5 prices">
 
                 <div class="w-50 d-flex flex-column align-items-center justify-content-center price-card">
 
@@ -92,6 +92,65 @@
                     <div class="w-90 d-flex justify-content-center align-items-center pricing">
 
                         <p><span class="fw-semibold text-lg">$0</span>/month</p>
+
+                    </div>
+
+                    <div class="feat d-flex flex-column">
+
+                        <h4 class="text-white">Available Features</h4>
+
+                        <div class="features">
+
+                            <div class="feature d-flex">
+
+                                <img src="" alt="">
+                                <p>Access to selected free courses.</p>
+
+                            </div>
+
+                            <div class="feature d-flex">
+
+                                <img src="" alt="">
+                                <p>ALimited course materials and resources.</p>
+
+                            </div>
+
+                            <div class="feature d-flex">
+
+                                <img src="" alt="">
+                                <p>Basic community support.</p>
+
+                            </div>
+
+                            <div class="feature d-flex">
+
+                                <img src="" alt="">
+                                <p>No certification upon completion.</p>
+
+                            </div>
+
+                            <div class="feature d-flex">
+
+                                <img src="" alt="">
+                                <p>Ad-supported platform.</p>
+
+                            </div>
+
+                            <div class="feature d-flex">
+
+                                <img src="" alt="">
+                                <p>Access to exclusive Pro Plan community forums.</p>
+
+                            </div>
+
+                            <div class="feature d-flex">
+
+                                <img src="" alt="">
+                                <p>Early access to new courses and updates.</p>
+
+                            </div>
+
+                        </div>
 
                     </div>
 
